[gd_scene load_steps=5 format=3 uid="uid://qex5mycnoe1"]

[ext_resource type="Script" path="res://hexes/base_hex.gd" id="1_nb18b"]
[ext_resource type="FontFile" uid="uid://bkyagj15rlibl" path="res://assets/fonts/noto-emoji.ttf" id="2_v3lst"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_eexbn"]

[sub_resource type="CylinderMesh" id="CylinderMesh_smw0l"]
material = SubResource("StandardMaterial3D_eexbn")
height = 0.1
radial_segments = 6

[node name="BaseHex" type="Node3D"]
transform = Transform3D(-8.74228e-08, 0, 2, 0, 2, 0, -2, 0, -8.74228e-08, 0, 0, 0)
script = ExtResource("1_nb18b")
hex_id = "X"
hex_type = "BASE"

[node name="SnapPoint" type="Node3D" parent="." groups=["Snap Points"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)

[node name="HexMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("CylinderMesh_smw0l")

[node name="HexIDLabel" type="Label3D" parent="."]
transform = Transform3D(-4.37114e-08, 1, -4.37114e-08, -3.82137e-15, 4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, -0.359193, 0.0564748, 0.206741)
visible = false
font = ExtResource("2_v3lst")
font_size = 20
